--- a/.github/workflows/configure-private-cloud.yml
+++ b/.github/workflows/configure-private-cloud.yml
@@ -21,9 +21,9 @@ jobs:
       TF_INPUT: "false"
 
       # vSphere / vRA / VCF environment-specific credentials
-      TF_VAR_serviceAccountUserName: ${{ secrets.VCF_SERVICE_USER }}
-      TF_VAR_serviceAccountPassword: ${{ secrets.VCF_SERVICE_PASSWORD }}
-      TF_VAR_vcfa_refresh_token: ${{ secrets.VCFA_API_TOKEN}}
+      TF_VAR_serviceAccountUserName: ${{ secrets.SERVICEACCOUNTUSERNAME }}
+      TF_VAR_serviceAccountPassword: ${{ secrets.SERVICEACCOUNTPASSWORD }}
+      TF_VAR_vcfa_refresh_token: ${{ secrets.VCFA_REFRESH_TOKEN}}
       TF_VAR_github_access_token: ${{ secrets.REPO_ACCESS_TOKEN }}
 
     steps:
