refresh token didn't exist

--- a/.github/workflows/configure-private-cloud.yml
+++ b/.github/workflows/configure-private-cloud.yml
@@ -23,7 +23,7 @@ jobs:
       # vSphere / vRA / VCF environment-specific credentials
       TF_VAR_serviceAccountUserName: ${{ secrets.SERVICEACCOUNTUSERNAME }}
       TF_VAR_serviceAccountPassword: ${{ secrets.SERVICEACCOUNTPASSWORD }}
-      TF_VAR_vcfa_refresh_token: ${{ secrets.VCFA_REFRESH_TOKEN}}
+      TF_VAR_vcfa_refresh_token: ${{ secrets.VCF_LAB_ALL_APPS_REFRESH_KEY}}
       TF_VAR_github_access_token: ${{ secrets.REPO_ACCESS_TOKEN }}
 
     steps:
